# evohomeclient

./: .gitignore  CMakeLists.txt  Makefile  README.md
demo/: CMakeLists.txt  evo-cmd.cpp  evo-demo.cpp  evo-schedule-backup.cpp  evo-setmode.cpp  evo-settemp.cpp
demo/src/: evo-demo.cpp
evohomeclient/: evohomeclient.cpp  evohomeclient.h  evohomeoldclient.cpp  evohomeoldclient.h
src/common/: messages.hpp
src/connection/: EvoHTTPBridge.cpp  EvoHTTPBridge.hpp  HTTPClient.cpp  HTTPClient.hpp  HTTPClient_Base.cpp  HTTPClient_Base.hpp
src/evohome/: devices.hpp  jsoncppbridge.hpp
src/evohomeclient/: API.hpp  evohomeclient.cpp  evohomeclient.h  evohomeclient.hpp
src/evohomeclient2/: API2.hpp  evohomeclient.cpp  evohomeclient.h  evohomeclient2.cpp  evohomeclient2.hpp
